cluster/web/helium-services/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: helium-services
    app.kubernetes.io/version: 137ec6f
  name: helium-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: helium-services
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helium-services
        app.kubernetes.io/version: 137ec6f
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - command:
        - nginx
        - -c
        - /etc/nginx/nginx.conf
        - -g
        - daemon off;
        image: nginx@sha256:a5688ea5d06cccc298505dddac20e8e28bfe7de67b015a374006593bc23700b1
        name: router
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          name: router-config
          readOnly: true
        - mountPath: /tmp
          name: router-tmp
        - mountPath: /static
          name: static
          readOnly: true
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 500m
            memory: 64Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 101
          runAsGroup: 101
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /connectivitycheck
            port: 8080
          periodSeconds: 10
      - args:
        - extension-proxy
        image: code.netbird.nathalie-stiefsohn.eu/my-homelab/helium-services:137ec6f@sha256:d2b36b71bb885e093b5939e46dcfaf6c02014a6dd6c01404399f4f2716f12a24
        name: extension-proxy
        resources:
          requests:
            cpu: 10m
            memory: 48Mi
          limits:
            cpu: "1"
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      - args:
        - ubo
        image: code.netbird.nathalie-stiefsohn.eu/my-homelab/helium-services:137ec6f@sha256:d2b36b71bb885e093b5939e46dcfaf6c02014a6dd6c01404399f4f2716f12a24
        name: ubo
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 384Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      volumes:
      - name: router-config
        configMap:
          name: helium-services-router
      - name: router-tmp
        emptyDir: {}
      - name: static
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
