cluster/web/helium-services/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: helium-services
    app.kubernetes.io/version: 137ec6f
  name: helium-services
spec:
  selector:
    app.kubernetes.io/name: helium-services
  ports:
  - name: http
    port: 8080
    targetPort: 8080
